kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 22i0857/frontend:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          hostPath:
            path: /run/desktop/mnt/host/d/DEVOPS/Devops-Project/frontend
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: project
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 8080
