kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
  namespace: project
spec:
  ingressClassName: nginx
  rules:
    - host: inam.project.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3001
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 3002
          - path: /comments
            pathType: Prefix
            backend:
              service:
                name: comment-service
                port:
                  number: 3003
  tls:
    - hosts:
        - inam.project.com
      secretName: myapp-tls
